fix: spacing in firefox

--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,11 @@
   color: #61dafb;
 }
 
+html {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
