--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -29,6 +29,9 @@ $border-radius: 1em;
 .value {
     width: 100%;
     margin-top: -1.3em;
+    @-moz-document url-prefix() {
+        margin-top: 0.1em;
+    }
 }
 
 .card_yellow {
@@ -65,10 +68,10 @@ $border-radius: 1em;
     background-color: whitesmoke;
     border-color: white;
     &:hover {
-        box-shadow: 7px -2px 10px 1px grey;
+        box-shadow: 7px -2px 10px 1px white;
     }
     &:focus {
-        box-shadow: 7px -2px 10px 1px grey;
+        box-shadow: 7px -2px 10px 1px white;
     } 
 }
 .card_purple {
