--- a/src/components/cities/cities.scss
+++ b/src/components/cities/cities.scss
@@ -16,6 +16,9 @@
     width: 100%;
     height: 4em;
     margin-top: -0em;
+    @-moz-document url-prefix() {
+        margin-top: -1.2em;
+    }
     margin-bottom: 0;
 }
 
