--- a/src/components/city/city.scss
+++ b/src/components/city/city.scss
@@ -17,10 +17,6 @@
     max-height: 10em;
 }
 
-.total {
-
-}
-
 .city_yellow {
     background-image: url('../../images/yellow_background.jpg') ;
 }
